--- a/src/com/desktoppet/fxml/RightClickMenu.fxml
+++ b/src/com/desktoppet/fxml/RightClickMenu.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane id="bg" prefHeight="178.0" prefWidth="130.0"
             style="-fx-background-color: rgba(255,255,255,0.76); -fx-background-radius: 10px; -fx-border-radius: 10px;"
